--- a/content/02.author-sections.md
+++ b/content/02.author-sections.md
@@ -234,8 +234,6 @@ More information on the tool and its inception is available in the project manus
 
 <!-- Casey Greene -->
 
-### Casey Greene
-
 I run an integrative genomics research lab at the University of of Pennsylvania, and I direct the Childhood Cancer Data Lab for Alex's Lemonade Stand Foundation.
 The lab at Penn develops methods to integrate large-scale public datasets, primarily from transcriptomic assays, and applies these methods to a broad set of biological questions.
 We've studied numerous systems, and we currently have active research projects in the application areas of microbial systems [@doi:10.1128/mSystems.00025-15; @doi:10.1016/j.cels.2017.06.003], cancers [@doi:10.1142/9789813235533_0008; @doi:10.1016/j.celrep.2018.03.046; @doi:10.1016/j.celrep.2018.03.076; @doi:10.1016/j.cell.2018.03.035], and rare diseases [@doi:10.1101/395947].
@@ -441,7 +439,40 @@ This is an improved version of my main figure in this interesting study [@doi:10
 
 
 <!-- Binglan Li -->
+### Binglan Li
+Greeting from the [Ritchie Lab](http://ritchielab.org/) at the University of Pennsylvania. I am a third year graduate student in the Genomics and Computational Biology programe and interested in prioritization of drug response-related gene via data integration approaches. 
 
+I am still on the early part of research journey. But I would love to share my latest work published in the PSB 2019 proceedings 2019.
+- Influence of tissue context on gene prioritization for predicted transcriptome-wide association studies [
+@doi.org/10.1142/9789813279827_0027]
+
+
+- Code snippet I'm most proud of:
+```
+############################################
+## Menu
+## 1. Food Preparation
+## 1.1. Load Necessary Libraries and Scripts
+## 1.2. Define Parameters
+## 2. Appetizers
+## 2.1. Data Simulation
+## 2.2. eQTL Detection
+## 3. Entree/Main Course
+## 3.1. Run single-tissue TWAS
+## 3.2. Run integrative TWAS
+## 3.3. Evaluate Power and Type I Error Rate of TWAS Results
+## 4. Dessert
+## 4.1. None. Sorry this is a healthy (aka anti-sweet) restaurant.
+############################################
+
+## actual code
+set.seed(random_seed, kind = "L'Ecuyer-CMRG")
+  ```
+
+- Here is a plot about minor allel frequency of the eQTLs in the GTEx v7 whole blood tissue. Please pretend that you do see a title in the figure. 
+![
+Minor allel frequency of eQTLs in the GTEx v7 whole blood tissue.
+](https://upenn.box.com/s/ixjqk6pwbai5kuqs0j96uo666uyscaam)
 
 
 <!-- Haiquan Li -->
